@@ -41,8 +41,8 @@ typedef enum {
 	L_D4 = 40,
 } e_loader_diag_t;
 
-int e_load(char *executable, e_epiphany_t *dev, unsigned row, unsigned col, e_bool_t start);
-int e_load_group(char *executable, e_epiphany_t *dev, unsigned row, unsigned col, unsigned rows, unsigned cols, e_bool_t start);
+int e_load(const char *executable, e_epiphany_t *dev, unsigned row, unsigned col, e_bool_t start);
+int e_load_group(const char *executable, e_epiphany_t *dev, unsigned row, unsigned col, unsigned rows, unsigned cols, e_bool_t start);
 
 e_loader_diag_t e_set_loader_verbosity(e_loader_diag_t verbose);
 
